# roboflow-ppe-detection

./: .dockerignore  .env  .env.example  .gitignore  .mthclirc.json  CAMERA_SETUP.md  CHANGES_APPLIED.txt  CHANGES_SUMMARY.txt  COMPLETE_REFACTORING_SUMMARY.sh  COMPLETION_SUMMARY.md  Dockerfile  FIXES_SUMMARY.md  FRONTEND_REFACTORING_COMPLETE.sh  FRONTEND_REFACTORING_SUMMARY.sh  IMPLEMENTATION_CHECKLIST.md  MAKEFILE_USAGE.md  Makefile  QUICK_REF.md  README.md.old  REFACTORING_SUMMARY.sh  ROBOFLOW_QUICKSTART.sh  RoboflowTester.js  SETUP_GUIDE.md  START_HERE.txt  SYSTEM_READY.md  SYSTEM_STATUS.md  TROUBLESHOOTING.md  WEBCAM_API_DOCUMENTATION.md  WEBCAM_ARCHITECTURE_DIAGRAMS.md  WEBCAM_FEATURE.md  WEBCAM_IMPLEMENTATION_SUMMARY.md  WEBCAM_QUICK_REFERENCE.md  WEBCAM_README.md  WEBCAM_SETUP.md  diagnose-webcam.sh  diagnose.js  diagnose.py  diagnose_frame.py  docker-compose.yml  download.sh  (+27 more)
camera/: index.html  main.css  main.js
docs/: Tawuniaya  notes-1.md  notes.md
lib/: DetectionAPI.js  DetectionService.js  FrameQueue.js  PythonInferenceService.js  VideoStreamProcessor.js  WebSocketBroadcaster.js  WebcamProcessor.js
vision-ui/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
vision-ui/src/: App-refactored.vue  App.vue  FRONTEND_ARCHITECTURE.js  main.js
vision-ui/src/components/: Dashboard.vue  ImageViewer.vue  StreamViewer-refactored.vue  StreamViewer.vue  ViolationFeed.vue  WebcamViewer copy.vue  WebcamViewer.vue
vision-ui/src/services/: APIService.js  CanvasRenderer.js  DetectionService.js  FPSCounter.js  StreamHealthMonitor.js  index.js  (+2 more)
(+1 files in other folders)
